improvement(index): reduce the width of horizontal rules to prevent overflow

--- a/style.css
+++ b/style.css
@@ -76,3 +76,8 @@ blockquote {
   color: #57606a;
   border-left: 0.25rem solid #d0d7de;
 }
+
+hr {
+  width: 90%;
+  float: left;
+}
